random diffs related to still being new to rails as well as additions to the public folder

--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -1,8 +1,8 @@
-  <h1 class="Three-Dee">ⓗoster</h1>
+<h1 class="Three-Dee">ⓗoster</h1>
 <form class="pure-form" style="text-align: center" action="/parties/new" method="post">
   Party Name: <input style="width: 9em" type="text" name="party_name">
   Party Size: <input style="width: 4em" type="number" name="party_size">
-  Phone Number: <input style="width: 9em" type="number" name="party_phone">
+  Phone Number: <input style="width: 9em" type="text" name="party_phone">
   <button type="submit" class="pure-button pure-button-primary">Submit</button>
 </form>
 <table class="pure-table pure-table-bordered" align="center" style="margin-top:5%; background-color:whitesmoke">
