extracted a couple methods and fixed a bug where my if display statement wasn't functioning

--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -16,11 +16,10 @@
   </tr>
   </thead>
   <tbody>
-  <% if @parties %>
-      <% @parties.each do |party| %>
-          <tr>
-            <% if party.display %>
-                <td><%= party.name %></td>
+      <% @parties.each do |party| if @parties %>
+            <% if party.display? %>
+              <tr>
+              <td><%= party.name %></td>
                 <td><%= party.size %></td>
                 <td><%= party.phone %></td>
                 <td><%= party.wait_time %> minutes</td>
