User can view a stats page with total average wait time displayed

--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -35,9 +35,12 @@
                     </button>
                   </form>
                 </td>
+              </tr>
             <% end %>
-          </tr>
       <% end %>
   <% end %>
   </tbody>
 </table>
+<footer>
+  <a href="/stats">stats</a>
+</footer>
