--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,3 +48,12 @@ form.formclass input.buttonclass{
     width:80px; height:20px;
     float:right;
 }
+
+footer {
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    height:30px;
+    width:99%;
+    text-align: right;
+}
