--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -27,7 +27,7 @@ body{
 }
 
 html {
-    background: url('../images/mimosa.jpeg') no-repeat center center fixed;
+    background: url('mimosa.jpeg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
