--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Hoster</title>
-  <%= stylesheet_link_tag    :all %>
+  <%= stylesheet_link_tag 'style', media: 'all' %>
   <%= favicon_link_tag 'favicon.png' %>
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
